[package]
name = "limitless-exchange-rust-sdk"
version = "1.0.8"
edition = "2021"
authors = ["https://github.com/kuchro"]
license = "MIT"
description = "Rust SDK for Limitless Exchange CLOB and NegRisk trading"
readme = "README.md"
repository = "https://github.com/limitless-labs-group/limitless-exchange-rust-sdk"
homepage = "https://limitless.exchange"
documentation = "https://docs.limitless.exchange"
rust-version = "1.74"
keywords = ["limitless", "exchange", "prediction-markets", "clob", "negrisk"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "limitless_exchange_rust_sdk"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures-util = "0.3"
hex = "0.4"
http = "1.3"
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.21"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
urlencoding = "2.1"
webpki-roots = "0.26"
zeroize = "1.8"
